deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jira-proxy
  labels:
    app: jira-proxy
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: jira-proxy
      version: v1
  template:
    metadata:
      labels:
        app: jira-proxy
        version: v1
    spec:
      containers:
      - name: jira-proxy
        image: gcr.io/monitoria-groovetech/jira-proxy:TAG_IMAGE
        ports:
        - containerPort: APP_PORT
        livenessProbe:
          httpGet:
            path: /healthy
            port: APP_PORT
          initialDelaySeconds: 3
          periodSeconds: 3
