service.yml
apiVersion: v1
kind: Service
metadata:
  name: jira-proxy
  labels:
    app: jira-proxy
    service: jira-proxy
spec:
  selector:
    app: jira-proxy
  ports:
    - name: http
      port: 80
      targetPort: APP_PORT
      protocol: TCP
  type: NodePort
