gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: proxy-jira-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: proxyjira
    hosts:
    - "*"
