ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jira-proxy
  annotations:
    kubernetes.io/ingress.global-static-ip-name: lb-jira-proxy
    networking.gke.io/managed-certificates: jira-proxy
    kubernetes.io/ingress.allow-http: "false"
spec: 
  rules:
  - http: 
     paths: 
     - path: /healthy
       pathType: Prefix
       backend: 
        service:
          name: jira-proxy
          port: 
           number: 80
     - path: /webhook
       pathType: Prefix
       backend: 
        service:
          name: jira-proxy
          port: 
           number: 80
